--- a/spinWheel/package.json
+++ b/spinWheel/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "font-awesome": "^4.7.0",
+    "lucide-react": "^0.453.0",
     "react": "^18.3.1",
     "react-custom-roulette": "^1.4.1",
+    "react-dice-roll": "^1.2.2",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "socket.io-client": "^4.8.0",
